syntax = "proto3";

service Example {
  rpc AddTwoNumbers(TwoNumbers) returns (OneNumber);
  rpc AddStreamOfNumbers(stream OneNumber) returns (OneNumber);
  rpc GetFibonacciSequence(Empty) returns (stream OneNumber);
  rpc RunningAverage(stream OneNumber) returns (stream OneNumber);
}

message Empty {}

message OneNumber { int32 a = 1; }

message TwoNumbers {
  int32 a = 1;
  int32 b = 2;
}
